# Win32Template

./: CMakeLists.txt  README.md
src/: application.cpp  application.hpp  main.cpp
src/log/: log.cpp  log.hpp
src/window/: base_window.hpp  window.cpp  window.hpp
